add clients forms

--- a/fronted/package.json
+++ b/fronted/package.json
@@ -28,7 +28,9 @@
     "npm": "^10.2.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
